device, first page

--- a/src/components/about-company/about-company.pug
+++ b/src/components/about-company/about-company.pug
@@ -2,7 +2,7 @@ mixin about-company()
     .about-company
         .container
             .about-company__about
-                h2 О нашей компании
+                h2.h2 О нашей компании
                 p Мы собрали в команду талантливых людей и успешно реализуем ваши проекты по всему миру. Наши агенты бывали в командировках в разных концах света и знают как правильно выбрать локацию, собрать подходящую команду и реализовать проект любой сложности. Наша уникальная компетенция - снимать контент уровня профессионального кинематографа без раздутия бюджета.
             .about-company__items
                 +company-icons(`${baseDir}assets/images/company-icons/about1`, 'Люди', 'Проверенные временем фанатики своего дела')
