--- a/src/components/company-icons/company-icons.pug
+++ b/src/components/company-icons/company-icons.pug
@@ -8,5 +8,5 @@ mixin company-icons(icon, title, name)
             if title
                 .company-icons__title
                     h3!=title
-        .company-icons__name
+        .company-icons__name.for-desktop
             p!= name
