--- a/src/components/partners/partners.pug
+++ b/src/components/partners/partners.pug
@@ -2,7 +2,7 @@ mixin partners()
     .partners
         .container
             .partners__title
-                h2 Наши партнеры
+                h2.h2 Наши партнеры
             .partners__logos
                 +slider()
 
