--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "fonts";
 @import "base";
 @import "helpers";
+@import "typography";
 
 @import "pages/catalog";
 @import "pages/category-page";
