--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,10 @@
 .header {
     margin-top: vc(31);
 
+    @include devices {
+        margin-top: vc(15);
+    }
+
     .container {
         display: flex;
         justify-content: space-between;
@@ -10,6 +14,11 @@
     &__logo {
         width: vc(349);
         height: vc(22);
+
+        @include devices {
+            width: vc(186);
+            height: vc(12);
+        }
     }
 
     &__socials {
@@ -39,6 +48,10 @@
     }
 
     @include devices {
-        background-color: $color-red;
+        &__menu {
+            width: vc(21);
+            height: vc(15);
+            background-color: #26D52D;
+        }
     }
 }
