--- a/src/components/scholl-icons/scholl-icons.scss
+++ b/src/components/scholl-icons/scholl-icons.scss
@@ -1,6 +1,10 @@
 .scholl-icons {
 
-    .container {}
+    .container {
+        @include  devices {
+            padding: 0;
+        }
+    }
 
     &__icons {
         display: flex;
@@ -10,6 +14,12 @@
         height: vc(185);
         align-items: center;
 
+        @include devices {
+            width: vc(102);
+            height: vc(148);
+
+        }
+
         &_icon {
             width: vc(127);
             height: vc(127);
@@ -18,13 +28,27 @@
             border-radius: 100%;
             position: absolute;
 
+            @include devices {
+                width: vc(101);
+                height: vc(101);
+            }
+
             svg {
                 position: relative;
                 width: vc(65);
                 height: vc(65);
                 top: vc(27);
                 left: vc(27);
+
+                @include devices {
+                    width: vc(48);
+                    height: vc(48);
+                    top: vc(25);
+                    left: vc(22);
+                }
             }
+
+
         }
 
         h3 {
@@ -34,20 +58,20 @@
             background: rgba(55, 39, 40, 1);
             border: vc(1) dashed $color-orange;
             border-radius: 100%;
-            font-style: normal;
             font-weight: 800;
-            font-size: 13px;
-            line-height: 16px;
+            font-size: vc(13);
+            line-height: vc(16);
             text-align: center;
-            vertical-align: middle;
             color: $color-orange;
-            padding-top: vc(9);
-            top: vc(0);
-            left: vc(40);
+            padding-top: vc(8);
+            left: vc(44);
+
+            @include devices {
+                left: vc(32);
+            }
         }
 
         p {
-            font-style: normal;
             font-weight: 400;
             font-size: vc(20);
             line-height: vc(23);
@@ -55,8 +79,15 @@
             color: $color-white;
             position: relative;
             top: vc(90);
-            width: vc(161);
+            max-width: vc(161);
             height: auto;
+
+            @include devices {
+                max-width: vc(117);
+                font-size: vc(14);
+                line-height: vc(16);
+                top: vc(70);
+            }
         }
     }
 }
