--- a/src/components/scholl/scholl.scss
+++ b/src/components/scholl/scholl.scss
@@ -1,25 +1,56 @@
 .scholl {
     margin-top: vc(120);
 
+    @include devices {
+        margin-top: vc(30);
+    }
+
+
     .container {
         display: flex;
+
+        @include devices {
+            display: inline-block;
+        }
     }
 
     &__online {
 
         h2 {
-            font-style: normal;
-            font-weight: 700;
-            font-size: vc(48);
-            color: $color-white;
-            width: vc(185);
-            height: auto;
             margin-right: vc(76);
+
+            @include devices {
+                margin: 0;
+                margin-bottom: vc(20);
+            }
         }
     }
 
     &__service {
         display: flex;
         gap: vc(25);
+
+        @include  devices {
+            flex-wrap: wrap;
+            gap: vc(25);
+        }
+    }
+
+    @include devices {
+
+        &__services {
+
+            &_service1 {
+                display: flex;
+                gap: vc(16);
+                margin-bottom: vc(30);
+            }
+
+            &_service2 {
+                display: flex;
+                justify-content: center;
+                gap: vc(58);
+            }
+        }
     }
 }
