--- a/src/components/company-icons/company-icons.scss
+++ b/src/components/company-icons/company-icons.scss
@@ -2,15 +2,9 @@
     $p: &;
 
     position: relative;
-    width: vc(365);
-    height: vc(261);
     border-radius: vc(10);
+    display: block;
     overflow: hidden;
-
-    @include devices {
-        width: vc(169);
-        height: vc(120);
-    }
 
     &__img {
         &:after {
@@ -21,9 +15,12 @@
             top: 0;
             left: 0;
             background: linear-gradient(180deg, rgba(49, 35, 35, 0) 0%, rgba(49, 35, 35, 0.84) 55.52%, #1B1818 100%);
-            border-radius: vc(10);
             transform: translateY(45%);
-            transition: transform $transition;
+            transition: $transition;
+
+            @include devices {
+                transform: none;
+            }
         }
 
         img {
@@ -68,12 +65,22 @@
         left: vc(25);
         bottom: vc(25);
 
+        @include devices {
+
+        }
+
         p {
             max-width: vc(210);
-            font-weight: 500;
-            font-size: vc(16);
-            line-height: vc(19);
+            font-weight: 600;
+            font-size: vc(20);
+            line-height: vc(24);
             color: $color-white;
+
+            @include devices {
+                font-size: vc(14);
+                line-height: vc(17);
+                max-width: vc(112);
+            }
         }
     }
 
