--- a/src/components/names-category/names-category.pug
+++ b/src/components/names-category/names-category.pug
@@ -2,7 +2,7 @@ mixin names-category()
     .names-category
         .container
             .names-category__title
-                h2 Название категории
+                h2.h2 Название категории
             .names-category__items
                 +company-icons(`${baseDir}assets/images/company-icons/about1`, false, 'Название услуги')
                 +company-icons(`${baseDir}assets/images/company-icons/about2`, false, 'Название услуги')
